# PhosphorosCore

./: .gitignore  .jenkinsFile  .pre-commit-config.yaml  CMakeLists.txt
PhzExecutables/: CMakeLists.txt
PhzExecutables/PhzExecutables/: BuildPPConfig.h  BuildReferenceSample.h  ComputePhotometricCorrections.h  ComputeRedshifts.h  ComputeSedWeight.h  ProgressReporter.h
PhzExecutables/conf/: ComputeReferenceSample.conf  PhzModelGrid2Fits.conf
PhzExecutables/conf/PhzExecutables/: CreatePhotometryGrid.conf  CreatePhzCatalog.conf  PhosphorosBuildTemplates.conf  PhosphorosComputeGalacticAbsorptionCoefficientGrid.conf  PhosphorosComputeLuminosityModelGrid.conf  PhosphorosComputeModelGrid.conf  PhosphorosComputePhotometricCorrections.conf  PhosphorosComputeRedshifts.conf  PhosphorosComputeReferenceSample.conf  PhosphorosFitTemplates.conf  PhzModelGrid2Fits.conf
PhzExecutables/python/PhzExecutable/: ExtractPpPdf.py
PhzExecutables/python/PhzExecutables/: ExtractPpPdf.py  ExtractZList.py
PhzExecutables/src/lib/: BuildPPConfig.cpp  BuildReferenceSample.cpp  ComputePhotometricCorrections.cpp  ComputeRedshifts.cpp  ComputeSedWeight.cpp  ProgressReporter.cpp
PhzExecutables/src/program/: BuildPPConfig.cpp  BuildPhotometry.cpp  BuildReferenceSample.cpp  BuildTemplates.cpp  ComputeFilterVariationCoefficientGrid.cpp  ComputeGalacticAbsorptionCoefficientGrid.cpp  ComputeLuminosityModelGrid.cpp  ComputeModelGrid.cpp  ComputeModelGridProgram.h  ComputeModelSed.cpp  ComputePhotometricCorrections.cpp  ComputeRedshifts.cpp  ComputeSedWeight.cpp  CreatePhotometryGrid.cpp  CreatePhzCatalog.cpp  DeriveZeroPoints.cpp  FitTemplates.cpp  PhzModelGrid2Fits.cpp
PhzExecutables/tests/python/: ExtractPpPdf_test.py  ExtractZList_test.py
PhzExecutables/tests/src/: BuildPPConfig_test.cpp  ComputeReferenceSample_test.cpp  ComputeSedWeight_test.cpp
PhzFilterVariation/: CMakeLists.txt
PhzFilterVariation/PhzFilterVariation/: FilterVariationSingleGridCreator.h
PhzFilterVariation/src/lib/: FilterVariationSingleGridCreator.cpp
PhzFilterVariation/tests/src/: FilterVariationSingleGridCreator_test.cpp
PhzGalacticCorrection/: CMakeLists.txt
PhzGalacticCorrection/PhzGalacticCorrection/: GalacticCorrectionCalculator.h  GalacticCorrectionFactorSingleGridCreator.h
PhzGalacticCorrection/src/lib/: GalacticCorrectionCalculator.cpp  GalacticCorrectionFactorSingleGridCreator.cpp
PhzLikelihood/: CMakeLists.txt
PhzLikelihood/PhzLikelihood/: AxisFunctionPrior.h  AxisWeightPrior.h  BayesianLikelihoodMarginalizationFunctor.h  BayesianMarginalizationFunctor.h  CatalogHandler.h  ChiSquareFunctor.h  ChiSquareLikelihoodLogarithm.h  ChiSquareWithUpperLimitFunctor.h  FilterShiftProcessModelGridFunctor.h  FixRedshiftProcessModelGridFunctor.h  GalacticAbsorptionProcessModelGridFunctor.h  GenericGridPrior.h  GroupedAxisCorrection.h  LikelihoodAlgorithm.h  LikelihoodGridFunctor.h  LikelihoodLogarithmAlgorithm.h  LikelihoodPdf1DTraits.h  LikelihoodScaleSampleLogarithmAlgorithm.h  MaxLikelihoodMarginalizationFunctor.h  MaxMarginalizationFunctor.h  NumericalAxisCorrection.h  NumericalAxisPrior.h  ParallelCatalogHandler.h  Pdf1DTraits.h  ProcessModelGridFunctor.h  ScaleFactorFunctor.h  ScaleFactorWithUpperLimitFunctor.h  ScalingSamplingLikelihoodGridFunctor.h  SedAxisCorrection.h  SharedPriorAdapter.h  SigmaScaleFactorFunctor.h  SingleGridPhzFunctor.h  SourcePhzFunctor.h  SumLikelihoodMarginalizationFunctor.h  SumMarginalizationFunctor.h  VolumePrior.h
PhzLikelihood/PhzLikelihood/_impl/: AxisFunctionPrior.icpp  AxisWeightPrior.icpp  BayesianLikelihoodMarginalizationFunctor.icpp  BayesianMarginalizationFunctor.icpp  CatalogHandler.icpp  ChiSquareFunctor.icpp  ChiSquareWithUpperLimitFunctor.icpp  GroupedAxisCorrection.icpp  LikelihoodAlgorithm.icpp  LikelihoodLogarithmAlgorithm.icpp  LikelihoodScaleSampleLogarithmAlgorithm.icpp  MaxLikelihoodMarginalizationFunctor.icpp  MaxMarginalizationFunctor.icpp  NumericalAxisCorrection.icpp  NumericalAxisPrior.h  ParallelCatalogHandler.icpp  ScaleFactorFunctor.icpp  ScaleFactorWithUpperLimitFunctor.icpp  SharedPriorAdapter.icpp  SumLikelihoodMarginalizationFunctor.icpp  SumMarginalizationFunctor.icpp
PhzLikelihood/src/lib/: BayesianMarginalizationFunctor.cpp  CatalogHandler.cpp  FilterShiftProcessModelGridFunctor.cpp  FixRedshiftProcessModelGridFunctor.cpp  GalacticAbsorptionProcessModelGridFunctor.cpp  GenericGridPrior.cpp  LikelihoodGridFunctor.cpp  LikelihoodLogarithmAlgorithm.cpp  LikelihoodScaleSampleLogarithmAlgorithm.cpp  ParallelCatalogHandler.cpp  ScalingSamplingLikelihoodGridFunctor.cpp  SedAxisCorrection.cpp  SingleGridPhzFunctor.cpp  SourcePhzFunctor.cpp  VolumePrior.cpp
PhzLikelihood/tests/src/: AxisFunctionPrior_test.cpp  AxisWeightPrior_test.cpp  BestFitFunctionMock.h  ChiSquareFunctor_test.cpp  ChiSquareLikelihoodLogarithm_test.cpp  ChiSquareWithUpperLimitFunctor_test.cpp  FilterShiftProcessModelGridFunctor_test.cpp  FixRedshiftProcessModelGridFunctor_test.cpp  FluxErrorPair_boost.h  GalacticAbsorptionProcessModelGridFunctor_test.cpp  GenericGridPrior_test.cpp  GroupedAxisCorrection_test.cpp  LikelihoodAlgorithm_test.cpp  LikelihoodCalcMock.h  LikelihoodFunctionMock.h  MaxMarginalizationFunctor_test.cpp  ScaleFactorCalcMock.h  ScaleFactorFunctor_test.cpp  ScaleFactorWithUpperLimitFunctor_test.cpp  SharedPriorAdapter_test.cpp  SigmaScaleFactorFunctor_test.cpp  SourcePhzFunctor_test.cpp  SumMarginalizationFunctor_test.cpp  VolumePrior_test.cpp
PhzOutput/: CMakeLists.txt
PhzOutput/PhzOutput/: BestModelCatalog.h  GridSampler.h  GridSamplerScale.h  GridType.h  LikelihoodHandler.h  LikelihoodPdfOutput.h  MultithreadHandler.h  OutputHandler.h  PdfOutput.h  PhzCatalog.h
PhzOutput/PhzOutput/PhzColumnHandlers/: BestLikelihoodModel.h  BestModel.h  BestModelFactory.h  BestModelOnlyZ.h  ColumnHandler.h  CopyColumns.h  CorrectedPhotometry.h  Flags.h  Id.h  LikelihoodPdf.h  Pdf.h  PhysicalParameter.h  (+1 more)
PhzTest/: CMakeLists.txt
PhzTest/PhzTest/: LuminosityGridConfig.h  ModelFixingAttribute.h  ModelFixingAttributeFromRow.h  ModelFixingCatalogConfig.h  OutputFileConfig.h
(+564 files in other folders)
